--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,11 @@
               "src/styles.css",
               "node_modules/slick-carousel/slick/slick.scss",
               "node_modules/slick-carousel/slick/slick-theme.scss",
-              "node_modules/font-awesome/css/font-awesome.css"
+              "node_modules/font-awesome/css/font-awesome.css",
+              "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
+              "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css",
+              "node_modules/animate.css/animate.min.css",
+               "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": [
 		          "node_modules/jquery/dist/jquery.min.js",
